# MCdeck

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  setup.cfg  setup.py
src/mcdeck/: __init__.py  __main__.py  marvelcdb.py  octgn.py  script.py  settings.py  tts.py  util.py
