[metadata]
name = MCdeck
version = attr: mcdeck.__version__
author = Cloudberries
author_email = lcgtools@proton.me
description = Custom card deck builder for Marvel Champions: TCG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcgtools/MCdeck
project_urls =
    Bug Tracker = https://github.com/lcgtools/MCdeck/issues
license = GNU LGPL v3 or later
license_files =
    LICENSE
    COPYING
    COPYING.LESSER
keywords = lcgtools, lcg
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
python_requires = >=3.9, <4
install_requires =
    lcgtools==0.5.5
    PySide6
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mcdeck = mcdeck.script:main
